--- a/materials/section/linear.tex
+++ b/materials/section/linear.tex
@@ -734,7 +734,7 @@ optimization theory.\\
 
 \begin{figure}[htpb]
     \centering
-    \includegraphics[width=0.8\linewidth]{fig/convexity.eps}
+    \includegraphics[width=0.8\linewidth]{fig/convexity.pdf}
     \caption{An illustration of convex and concave functions, along with
     an example of a funciton which is neither concave nor convex.}
     \label{fig:convex}
